--- a/index.html
+++ b/index.html
@@ -149,6 +149,30 @@
       .scroll-title {
         font-size: 3rem;
         text-align: center;
+        transform: translate(-50%, -50%) perspective(800px);
+        left: 50%;
+        top: 45%;
+        max-width: 90%;
+        white-space: nowrap;
+      }
+    }
+      .navbar .logo-title {
+        flex-direction: column;
+        align-items: center;
+      }
+      .navbar .title-text {
+        font-size: 1.3rem;
+        text-align: center;
+        margin-top: 0.5rem;
+      }
+      .navbar nav {
+        justify-content: center;
+        gap: 1rem;
+        margin-top: 0.5rem;
+      }
+      .scroll-title {
+        font-size: 3rem;
+        text-align: center;
         transform: translate(-50%, -50%);
       }
     }
@@ -170,7 +194,7 @@
 
 <div class="scroll-title" id="scrollTitle">QUINCA PLUS</div>
 
-<section id="presentation">
+<section id="presentation" style="margin-top: 60vh;">
   <h2>Présentation</h2>
   <p>Fondée en 1994 par Joëlle Tholozan, QUINCA PLUS est une entreprise familiale martiniquaise de quincaillerie qui s’est imposée dans un univers d’hommes grâce au courage et à la détermination d’une femme visionnaire. Partie de rien, avec peu de moyens mais une passion immense pour le métier, elle a su construire un commerce de proximité solide, réputé pour son sérieux et sa relation client.</p>
   <p>Depuis plus de 30 ans, QUINCA PLUS accompagne particuliers et professionnels avec une large gamme de produits pour le bâtiment, l’ameublement, la fixation, les colles, les peintures et bien plus. Aujourd’hui encore, l’entreprise reste fidèle à ses valeurs : service, qualité, authenticité.</p>
