--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </div>
   <nav>
     <a href="#presentation"><i class="fa-solid fa-user"></i> Présentation</a>
-    <a href="#produits"><i class="fa-solid fa-box"></i> Produits</a>
+    <a href="produits.html"><i class="fa-solid fa-box"></i> Produits</a>
     <a href="#contact"><i class="fa-solid fa-envelope"></i> Contact</a>
   </nav>
 </div>
