--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
       flex-wrap: wrap;
     }
     .navbar .logo-title {
-      display: flex;
-      align-items: center;
-    }
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+}
     .navbar img {
       height: 50px;
       margin-right: 1rem;
@@ -126,12 +128,38 @@
       color: #a60000;
     }
     @media (max-width: 600px) {
-      .navbar {
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
-        text-align: center;
-      }
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+    padding: 1rem;
+    text-align: center;
+  }
+  .navbar .logo-title {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .navbar .title-text {
+    font-size: 1.3rem;
+    text-align: center;
+    margin-top: 0;
+  }
+  .navbar nav {
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 0.5rem;
+  }
+  .scroll-title {
+    font-size: 3rem;
+    text-align: center;
+    transform: translate(-50%, -50%) perspective(800px);
+    left: 50%;
+    top: 45%;
+    max-width: 90%;
+    white-space: nowrap;
+  }
+}
       .navbar .logo-title {
         flex-direction: column;
         align-items: center;
