--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
       color: #333;
     }
     .navbar {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background: #a60000;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0.5rem 2rem;
-      z-index: 1000;
-      flex-wrap: wrap;
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background: #a60000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  z-index: 1000;
+  flex-wrap: wrap;
+}
     .navbar .logo-title {
   display: flex;
   align-items: center;
-  flex-direction: row;
   gap: 1rem;
 }
     .navbar img {
