--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
 <body>
 
 <div class="navbar">
-  <div class="logo-title">
-    <img src="logo-transparent.png" alt="Logo Quinca Plus">
-    <div class="title-text">QUINCA PLUS</div>
-  </div>
+  <div class="logo-title" style="display: flex; align-items: center; flex-direction: row; gap: 1rem;">
+  <img src="logo-transparent.png" alt="Logo Quinca Plus">
+  <div class="title-text">QUINCA PLUS</div>
+</div>
   <nav>
     <a href="#presentation"><i class="fa-solid fa-user"></i> Présentation</a>
     <a href="produits.html"><i class="fa-solid fa-box"></i> Produits</a>
