--- a/index.html
+++ b/index.html
@@ -162,9 +162,12 @@
   }
 }
       .navbar .logo-title {
-        flex-direction: column;
-        align-items: center;
-      }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+}
+
       .navbar .title-text {
         font-size: 1.3rem;
         text-align: center;
