--- a/produits.html
+++ b/produits.html
@@ -54,6 +54,25 @@
     nav a:hover {
       text-decoration: underline;
     }
+      @media (max-width: 600px) {
+      .navbar {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .logo-title {
+        justify-content: center;
+        margin-bottom: 0.5rem;
+      }
+      .title-text {
+        font-size: 1rem;
+        text-align: center;
+      }
+      nav {
+        justify-content: center;
+        width: 100%;
+      }
+    }
   </style>
 </head>
 <body>
