--- a/index.html
+++ b/index.html
@@ -109,17 +109,11 @@
 <div class="scroll-title">QUINCA PLUS</div>
 
 <div class="container">
-  <aside class="sidebar">
+  <aside class="sidebar" style="width: 150px;">
     <ul>
-      <li><a href="#promotions">Promotions</a></li>
-      <li><a href="#batiment">Bâtiment</a></li>
-      <li><a href="#ameublement">Ameublement</a></li>
-      <li><a href="#fixations">Fixations</a></li>
-      <li><a href="#colles">Colles & Silicones</a></li>
-      <li><a href="#peintures">Peintures</a></li>
-      <li><a href="#electro">Électroportatif</a></li>
-      <li><a href="#serrurerie">Serrurerie</a></li>
-      <li><a href="#autres">Autres</a></li>
+      <li><a href="#presentation">Présentation</a></li>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#catalogue">Catalogue</a></li>
     </ul>
   </aside>
   <main class="content">
