--- a/index.html
+++ b/index.html
@@ -137,8 +137,9 @@
 
 <section id="presentation">
   <h2>Présentation</h2>
-  <p>Fondée en 1994 par Joëlle Tholozan, QUINCA PLUS est une entreprise familiale martiniquaise de quincaillerie qui s’est imposée dans un univers d’hommes grâce au courage et à la détermination d’une femme visionnaire.</p>
-  <p>Partie de rien, avec peu de moyens mais une passion immense pour le métier, elle a su construire un commerce de proximité solide, réputé pour son sérieux et sa relation client.</p>
+  <p>QUINCA PLUS, c’est avant tout l’histoire d’une femme exceptionnelle : Joëlle Tholozan. En 1994, armée de courage et d’une détermination sans faille, elle se lance dans l’univers très masculin de la quincaillerie, sans gros moyens, mais avec une passion immense pour le métier. Elle crée seule son entreprise dans la zone industrielle de Ducos, et réussit à imposer QUINCA PLUS comme une référence locale.</p>
+  <p>Entreprise familiale profondément ancrée dans le tissu économique martiniquais, QUINCA PLUS accompagne depuis plus de 30 ans aussi bien les professionnels que les particuliers. Notre force repose sur notre sérieux, notre proximité, notre réactivité, mais aussi sur la diversité de nos produits sélectionnés avec soin. De la petite vis au produit technique, nous avons su répondre aux besoins de milliers de clients avec constance et professionnalisme.</p>
+  <p>Fidèle à ses valeurs, QUINCA PLUS continue d’évoluer, tout en restant une entreprise humaine, à taille réelle, portée par l’héritage d’une femme visionnaire. Chez nous, on ne vend pas seulement de la quincaillerie, on partage un savoir-faire et une histoire.</p>
   <div id="contact" style="margin-top: 2rem;">
     <h3>Contact</h3>
     <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
