--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
   <p>Fidèle à ses valeurs, QUINCA PLUS continue d’évoluer, tout en restant une entreprise humaine, à taille réelle, portée par l’héritage d’une femme visionnaire. Chez nous, on ne vend pas seulement de la quincaillerie, on partage un savoir-faire et une histoire.</p>
   <div id="contact" style="margin-top: 2rem;">
     <h3>Contact</h3>
+    <p>Adresse : Zone industrielle Cocotte Canal, 97224 Ducos</p>
     <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
     <p>Téléphone : 0596 56 40 26</p>
   </div>
