--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QUINCA PLUS</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+<head>$1
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -145,6 +142,7 @@
     <p>Adresse : Zone industrielle Cocotte Canal, 97224 Ducos</p>
     <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
     <p>Téléphone : 0596 56 40 26</p>
+    <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : 0696 30 39 95</p>
   </div>
 </section>
 
