--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     <h3>Contact</h3>
     <p>Adresse : Zone industrielle Cocotte Canal, 97224 Ducos</p>
     <p>Email : <a href="mailto:contact.quincaplus@gmail.com">contact.quincaplus@gmail.com</a></p>
-    <p>Téléphone : 0596 56 40 26</p>
-    <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : 0696 30 39 95</p>
+    <p>Téléphone : <a href="tel:+596596564026">0596 56 40 26</a></p>
+    <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : <a href="https://wa.me/596696303995" style="color: inherit; text-decoration: none;">0696 30 39 95</a></p>
   </div>
 </section>
 
