--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   </main>
 </div>
 
-<section id="presentation">
+<section id="presentation" style="max-width: 700px; margin: 0 auto;">
   <h2>Présentation</h2>
   <p>QUINCA PLUS, c’est avant tout l’histoire d’une femme exceptionnelle : Joëlle Tholozan. En 1994, armée de courage et d’une détermination sans faille, elle se lance dans l’univers très masculin de la quincaillerie, sans gros moyens, mais avec une passion immense pour le métier. Elle crée seule son entreprise dans la zone industrielle de Ducos, et réussit à imposer QUINCA PLUS comme une référence locale.</p>
   <p>Entreprise familiale profondément ancrée dans le tissu économique martiniquais, QUINCA PLUS accompagne depuis plus de 30 ans aussi bien les professionnels que les particuliers. Notre force repose sur notre sérieux, notre proximité, notre réactivité, mais aussi sur la diversité de nos produits sélectionnés avec soin. De la petite vis au produit technique, nous avons su répondre aux besoins de milliers de clients avec constance et professionnalisme.</p>
