--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+<head>$1
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <style>
     body {
@@ -84,13 +84,43 @@
     }
       @media (max-width: 600px) {
   .scroll-title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     left: 50%;
-    top: 45%;
+    top: 40%;
     transform: translate(-50%, -50%) perspective(800px);
     text-align: center;
     white-space: nowrap;
   }
+  header img {
+    height: 60px;
+  }
+  header h1 {
+    font-size: 2rem;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .sidebar {
+    width: 50px !important;
+    display: block;
+    height: auto;
+    padding: 0.5rem;
+    overflow: hidden;
+  }
+  .sidebar ul {
+    display: block;
+    padding: 0;
+  }
+  .sidebar li {
+    margin: 0;
+  }
+  .content {
+    padding: 1rem;
+  }
+  section {
+    padding: 2rem 1rem;
+  }
+}
   header img {
     height: 60px;
   }
