--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quinca Plus</title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
@@ -18,29 +22,37 @@
       justify-content: center;
     }
     header img {
-      height: 80px;
-      margin-bottom: 1rem;
+      height: 60px;
     }
     header h1 {
-      font-size: 3rem;
+      font-size: 2rem;
       color: gold;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-      margin: 0;
-      text-transform: uppercase;
-      letter-spacing: 2px;
+      text-shadow: 1px 1px 2px #000;
     }
-      .container {
+    .container {
       display: flex;
     }
     .sidebar {
-      width: 200px;
+      width: 50px;
+      height: auto;
+      overflow: hidden;
+      transition: width 0.3s ease;
       background-color: #e0e0e0;
-      padding: 1rem;
-      min-height: calc(100vh - 160px);
+      padding: 1rem 0.5rem;
+    }
+    .sidebar button {
+      display: block;
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      margin: 0 auto 1rem;
     }
     .sidebar ul {
       list-style: none;
-      padding: 0;
+      padding-left: 0;
+      display: none;
+      transition: opacity 0.3s ease;
     }
     .sidebar li {
       margin: 1rem 0;
@@ -57,9 +69,9 @@
       flex: 1;
       padding: 2rem;
     }
-  .scroll-title {
+    .scroll-title {
       position: fixed;
-      top: 50%;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%) perspective(800px);
       font-size: 6rem;
@@ -68,10 +80,11 @@
       text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
       z-index: 900;
       pointer-events: none;
+      white-space: nowrap;
     }
     section {
       padding: 6rem 2rem;
-      max-width: 1000px;
+      max-width: 700px;
       margin: auto;
     }
     section h2 {
@@ -82,212 +95,35 @@
       font-size: 1.1rem;
       line-height: 1.6;
     }
-      @media (max-width: 600px) {
-  .scroll-title {
-    font-size: 2.5rem;
-    left: 50%;
-    top: 40%;
-    transform: translate(-50%, -50%) perspective(800px);
-    text-align: center;
-    white-space: nowrap;
-    width: 100vw;
-  }
-  header img {
-    height: 60px;
-  }
-  header h1 {
-    font-size: 2rem;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .sidebar {
-    width: 50px !important;
-    display: block;
-    height: auto;
-    padding: 0.5rem;
-    overflow: hidden;
-  }
-  .sidebar ul {
-    display: block;
-    padding: 0;
-  }
-  .sidebar li {
-    margin: 0;
-  }
-  .content {
-    padding: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-}
-  header img {
-    height: 60px;
-  }
-  header h1 {
-    font-size: 2rem;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .sidebar {
-    width: 50px !important;
-    display: block;
-    height: auto;
-    padding: 0.5rem;
-    overflow: hidden;
-  }
-  .sidebar ul {
-    display: block;
-    padding: 0;
-  }
-  .sidebar li {
-    margin: 0;
-  }
-  .content {
-    padding: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-}
-  header img {
-    height: 60px;
-  }
-  header h1 {
-    font-size: 2rem;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .sidebar {
-    width: 50px !important;
-    display: block;
-    height: auto;
-    padding: 0.5rem;
-    overflow: hidden;
-  }
-  .sidebar ul {
-    display: block;
-    padding: 0;
-  }
-  .sidebar li {
-    margin: 0;
-  }
-  .content {
-    padding: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-}
-  header img {
-    height: 60px;
-  }
-  header h1 {
-    font-size: 2rem;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .sidebar {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    height: auto;
-    padding: 0.5rem;
-  }
-  .sidebar ul {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    padding: 0;
-  }
-  .sidebar li {
-    margin: 0;
-  }
-  .content {
-    padding: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-}
-  header img {
-    height: 60px;
-  }
-  header h1 {
-    font-size: 2rem;
-  }
-  .container {
-    flex-direction: column;
-  }
-  .sidebar {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    height: auto;
-    padding: 0.5rem;
-  }
-  .sidebar ul {
-    display: flex;
-    gap: 1rem;
-    justify-content: center;
-    padding: 0;
-  }
-  .sidebar li {
-    margin: 0;
-  }
-  .content {
-    padding: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-}
+    @media (max-width: 600px) {
+      .scroll-title {
+        font-size: 2.5rem;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%) perspective(800px);
+        width: auto;
+        text-align: center;
+        white-space: nowrap;
+      }
     }
   </style>
-
-
 </head>
 <body>
-
 <header>
   <img src="logo-transparent.png" alt="Logo Quinca Plus">
   <h1>Quinca Plus</h1>
 </header>
-
 <div class="scroll-title">QUINCA PLUS</div>
-
 <div class="container">
-  <aside class="sidebar" id="sidebar" style="width: 50px; height: auto; overflow: hidden; transition: width 0.3s ease; background-color: #e0e0e0; padding: 1rem 0.5rem;">
-  <button onclick="toggleSidebarMenu()" style="background:none;border:none;font-size:1.5rem;cursor:pointer;margin: 0 auto 1rem; display: block;">☰</button>
-  <ul id="sidebar-menu" style="display: none; transition: opacity 0.3s ease; list-style: none; padding-left: 0;">
-    <li style="margin: 1rem 0;"><a href="#catalogue" style="text-decoration: none; color: #333; font-weight: bold;">Catalogue</a></li>
-  </ul>
-</aside>
-<script>
-  function toggleSidebarMenu() {
-    const menu = document.getElementById('sidebar-menu');
-    const sidebar = document.getElementById('sidebar');
-    const isVisible = menu.style.display === 'block';
-    menu.style.display = isVisible ? 'none' : 'block';
-    sidebar.style.width = isVisible ? '50px' : '130px';
-  }
-</script>
-<script>
-  function toggleMenu() {
-    const menu = document.getElementById('sidebar-menu');
-    menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
-  }
-</script>
-  <main class="content">
-    
-  </main>
+  <aside class="sidebar" id="sidebar">
+    <button onclick="toggleSidebarMenu()">☰</button>
+    <ul id="sidebar-menu">
+      <li><a href="#catalogue">Catalogue</a></li>
+    </ul>
+  </aside>
+  <main class="content"></main>
 </div>
-
-<section id="presentation" style="max-width: 700px; margin: 0 auto;">
+<section id="presentation">
   <h2>Présentation</h2>
   <p>QUINCA PLUS, c’est avant tout l’histoire d’une femme exceptionnelle : Joëlle Tholozan. En 1994, armée de courage et d’une détermination sans faille, elle se lance dans l’univers très masculin de la quincaillerie, sans gros moyens, mais avec une passion immense pour le métier. Elle crée seule son entreprise dans la zone industrielle de Ducos, et réussit à imposer QUINCA PLUS comme une référence locale.</p>
   <p>Entreprise familiale profondément ancrée dans le tissu économique martiniquais, QUINCA PLUS accompagne depuis plus de 30 ans aussi bien les professionnels que les particuliers. Notre force repose sur notre sérieux, notre proximité, notre réactivité, mais aussi sur la diversité de nos produits sélectionnés avec soin. De la petite vis au produit technique, nous avons su répondre aux besoins de milliers de clients avec constance et professionnalisme.</p>
@@ -300,7 +136,15 @@
     <p><i class="fa-brands fa-whatsapp" style="color: green;"></i> WhatsApp : <a href="https://wa.me/596696303995" style="color: inherit; text-decoration: none;">0696 30 39 95</a></p>
   </div>
 </section>
-
+<script>
+  function toggleSidebarMenu() {
+    const menu = document.getElementById('sidebar-menu');
+    const sidebar = document.getElementById('sidebar');
+    const isVisible = menu.style.display === 'block';
+    menu.style.display = isVisible ? 'none' : 'block';
+    sidebar.style.width = isVisible ? '50px' : '130px';
+  }
+</script>
 <script>
   const title = document.querySelector('.scroll-title');
   window.addEventListener('scroll', () => {
@@ -312,6 +156,5 @@
     title.style.opacity = opacity;
   });
 </script>
-
 </body>
 </html>
